# IEEExtreme

Solution2-Barrett Reduction/: .editorconfig  CMakeLists.txt  main.c  solution2.c  solution2.h
